--- a/src/content/docs/zh-cn/index.mdx
+++ b/src/content/docs/zh-cn/index.mdx
@@ -1,13 +1,13 @@
 ---
-title: OKCODE | 记录AI, Python, Java全栈开发
-description: OKCODE | AI, Python, Java全栈开发开发过程, 生活和提供专业的网站与小程序开发、电商解决方案与移动应用构建服务。
+title: "OKCODE | 实用开发教程与技术服务"
+description: "OKCODE 是一个技术博客，记录开发过程、生活方式，并提供专业的网站、小程序和移动应用开发服务。"
 template: splash
 hero:
-  title: 记录开发过程
-  tagline: "记录 AI, Python, Java 全栈开发开发过程与生活"
+  title: 记录开发之旅
+  tagline: 关于 AI、全栈开发和西班牙生活的见解。
   image:
     alt: OKCODE Hero Image
-    file: ../../../assets/hero.svg 
+    file: ../../../../src/assets/hero.svg
   actions:
     - text: 📂 我的项目
       link: '#-正在开发中'
@@ -15,24 +15,19 @@ hero:
     - text: 🆕 最新文章
       link: '#-最新教程'
       variant: secondary
-    - text: 📍西班牙生活指南
-      link: '#-生活指南'
-      variant: secondary
-    - text: 更多教程
-      link: /zh-cn/guides/example/
+    - text: 探索教程
+      link: /zh-cn/guides/tutorials
       icon: right-arrow
       variant: primary
-    - text: 咨询开发业务
-      link: /zh-cn/reference/services
+    - text: 联系我
+      link: /zh-cn/reference/services/
       icon: external
       variant: secondary
-
 ---
 
 import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
 import { ShowcaseText, ShowcaseImage } from 'starlight-showcases';
 import { Badge } from '@astrojs/starlight/components';
-
 
 ---
 
@@ -45,10 +40,10 @@ import { Badge } from '@astrojs/starlight/components';
         href: '/',
         title: 'flappy bird',
       },
-        {
+      {
         thumbnail: import('../../../../src/assets/portfolio.svg'),
         href: '/',
-        title: 'working on it',
+        title: '正在开发',
       },
     ]}
   />
@@ -58,57 +53,30 @@ import { Badge } from '@astrojs/starlight/components';
 ## 🆕 最新教程
 <CardGrid stagger>
   <LinkCard 
-    title="WordPress 高级定制技巧" 
-    description="2025 年最新 WordPress 开发实践：自定义字段、性能优化和安全加固。" 
-    href="/zh-cn/guides/wordpress-advanced/" 
+    title="获取西班牙工作历史记录（Vida Laboral）" 
+    description="关于如何在线、通过短信或亲自到社保办公室申请西班牙 Vida Laboral 证书的完整指南。" 
+    href="/zh-cn/guides/vida-laboral-application-guide" 
   />
   <LinkCard 
-    title="Flutter 跨平台 APP 开发入门" 
-    description="使用 Flutter 构建高性能移动应用，从基础到发布的全程指南。" 
-    href="/zh-cn/guides/flutter-intro/" 
-  />
-  <LinkCard 
-    title="Shopify 主题开发最佳实践" 
-    description="掌握 Shopify Liquid 模板语言，创建自定义电商主题。" 
-    href="/zh-cn/guides/shopify-themes/" 
+    title="联系我获取开发服务" 
+    description="联系我进行开发服务和咨询。" 
+    href="/zh-cn/reference/services/" 
   />
 </CardGrid>
 
 ---
-
-## 🌍 生活指南
-
-<CardGrid>
-  <LinkCard 
-    title="西班牙生活指南" 
-    description="深耕西班牙签证、移民、教育及当地生活实操建议，为海外华人提供价值参考。" 
-    href="/zh-cn/spain/" 
-  />
-  <LinkCard 
-    title="摄影与旅行" 
-    description="记录地中海的光影瞬间，分享世界各地的旅游攻略与摄影技巧。" 
-    href="/zh-cn/photography/" 
-  />
-</CardGrid>
-
----
-
-## 📸 摄影作品集
+## 📸 摄影作品
 
 <CardGrid>
-  <ShowcaseImage
-    entries={[
-      {
-        thumbnail: import('../../../../src/assets/portfolio.svg'),
-        href: '/',
-        title: 'flappy bird',
-      },
-        {
-        thumbnail: import('../../../../src/assets/portfolio.svg'),
-        href: '/',
-        title: 'working on it',
-      },
-    ]}
-  />
+  <Card>
+    <a href="https://www.pexels.com/@okcode-2150281490" target="_blank" rel="noopener noreferrer" className="block">
+      <img 
+        src="https://images.pexels.com/photos/35381580/pexels-photo-35381580.jpeg?auto=compress&cs=tinysrgb&w=800" 
+        alt="OKCODE Pexels 摄影作品集" 
+        className="rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 w-full h-auto"
+        loading="lazy"
+      />
+    </a>
+  </Card>
 </CardGrid>
 ---
